# normalization

./: Untitled.ipynb  Untitled1.ipynb  pyproject.toml  segments.csv  style.md
normalization/: __init__.py  base.py  cardinals.py  date.py  fleurs.py  ordinals.py  time.py  units.py
tests/: test_cardinals.py  test_date.py  test_ordinals.py
