[tool.poetry]
name = "normalization"
version = "0.1.0"
description = ""
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
num2words = {git = "https://github.com/dtrifuno/num2words", rev = "mk_lang"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
